[gd_scene load_steps=10 format=2]

[ext_resource path="res://Character/fr_character.gd" type="Script" id=1]
[ext_resource path="res://Roboto/Roboto.tres" type="DynamicFont" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://black.tres" type="StyleBox" id=4]
[ext_resource path="res://Character/select_arrow.png" type="Texture" id=5]
[ext_resource path="res://Character/aura.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0235294, 0.494118, 0.0588235, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.0313726, 0.819608, 1 )

[node name="Character" type="Control"]
margin_right = 112.0
margin_bottom = 169.0
rect_min_size = Vector2( 112, 169 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aura" type="Sprite" parent="."]
visible = false
position = Vector2( 56, 40 )
scale = Vector2( 0.188235, 0.224649 )
texture = ExtResource( 6 )

[node name="Background" type="Panel" parent="."]
margin_top = 56.0
margin_right = 112.0
margin_bottom = 120.0
mouse_filter = 1
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 8.0
margin_top = 67.0
margin_right = 105.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 2 )
text = "Player Name"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 56, 31 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bars" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 84.0
margin_right = 104.0
margin_bottom = 116.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP_bar" type="ProgressBar" parent="Bars"]
margin_right = 96.0
margin_bottom = 14.0
rect_min_size = Vector2( 96, 14 )
mouse_filter = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 0.866667, 0.807843, 0.807843, 1 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="Bars/HP_bar"]
margin_right = 96.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana_bar" type="ProgressBar" parent="Bars"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 14 )
mouse_filter = 1
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Mana" type="Label" parent="Bars/Mana_bar"]
margin_right = 96.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = -24.0
margin_top = 124.0
margin_right = 136.0
margin_bottom = 164.0
mouse_filter = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 144, 64 )
rotation = 3.14159
texture = ExtResource( 5 )

[node name="left_arrow" type="Sprite" parent="."]
visible = false
position = Vector2( -30, 64 )
texture = ExtResource( 5 )
[connection signal="gui_input" from="." to="." method="_on_click"]
[connection signal="gui_input" from="Background" to="." method="_on_click"]
[connection signal="gui_input" from="Bars/HP_bar" to="." method="_on_click"]
[connection signal="gui_input" from="Bars/Mana_bar" to="." method="_on_click"]
